--- a/Cab Demand Prediction.ipynb
+++ b/Cab Demand Prediction.ipynb
@@ -11,21 +11,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-   
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Goal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To predict the total number of cabs booked in each hour to increase the efficiency of the service and enhance user experience by minimizing waiting time. "
+    "BACKGROUND:\n",
+    "Cab booking system is the process where renting a cab is automated through an app throughout a city. Using this app, people can book a cab from one location to another location. Being a cab booking app company, exploiting the understanding of cab supply and demand could increase the efficiency of their service and enhance user experience by minimizing waiting time. Objective of this project is to combine historical usage pattern along with the open data sources like weather data to forecast cab booking demand in a city.<br><br>\n",
+    "PROCESS FLOW:\n",
+    "You will be provided with hourly renting data span of two years. Data is randomly divided into train and test set. You must predict the total count of cabs booked in each hour covered by the test set, using the information available prior to the booking period. You need to append the train_label dataset to train.csv as ‘Total_booking’ column. \n",
+    "Please find the descriptions of the columns present in the dataset as below.\n",
+    "datetime - hourly date + timestamp \n",
+    "season - spring, summer, autumn, winter \n",
+    "holiday - whether the day is considered a holiday \n",
+    "workingday - whether the day is neither a weekend nor holiday \n",
+    "weather - Clear , Cloudy, Light Rain, Heavy temp - temperature in Celsius \n",
+    "atemp - \"feels like\" temperature in Celsius\n",
+    "humidity - relative humidity \n",
+    "windspeed - wind speed \n",
+    "Total_booking - number of total booking<br>\n",
+    "\n",
+    "TASKS:\n",
+    " Following are the tasks, which need to be developed while executing the project: \n",
+    "Task 1: \n",
+    "1. Visualize data using different visualizations to generate interesting insights.\n",
+    "2. Outlier Analysis \n",
+    "3. Missing value analysis \n",
+    "4. Visualizing Total_booking Vs other features to generate insights \n",
+    "5. Correlation Analysis\n",
+    "Task 2: \n",
+    "\t•\tFeature Engineering\n",
+    "\t•\tCreate various ML models of your choice and compare all the models to create a model with highest accuracy. \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -5248,15 +5262,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test=pd.concat([test,predictions],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 200,
    "metadata": {},
    "outputs": [],
@@ -5525,13 +5530,6 @@
    "source": [
     "test"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
